devsecopsday/kubernetes-security/hands-on/k8s/gatekeeper-test-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: gatekeeper-test-pod
spec:
  containers:
    - name: my-container
      image: nginx
      securityContext:
        runAsNonRoot: false   # not permitted !!!
