devsecopsday/kubernetes-security/hands-on/k8s/pod-nginx.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-pod
spec:
  serviceAccountName: my-serviceaccount
  containers:
  - name: my-container
    image: nginx:latest
    ports:
    - containerPort: 80
