devsecopsday/kubernetes-security/hands-on/k8s/pod-with-secret.yaml
apiVersion: v1
kind: Pod
metadata:
  name: secret-access-pod
spec:
  containers:
    - name: secret-container
      image: nginx
