devsecopsday/kubernetes-security/hands-on/k8s/conjur-follower-deploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: conjur-follower
  namespace: conjur-follower
  labels:
    app: conjur-follower
spec:
  ports:
  - port: 443
    name: https
  selector:
    app: conjur-follower

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: conjur-follower
  namespace: conjur-follower
spec:
  replicas: 1
  selector:
    matchLabels:
      app: conjur-follower
  template:
    metadata:
      labels:
        app: conjur-follower
        name: conjur-follower
        role: follower
    spec:
      serviceAccountName: authn-k8s-sa
      volumes:
      - name: seedfile
        emptyDir:
          medium: Memory
      - name: conjur-token
        emptyDir:
          medium: Memory
      containers:
      - name: conjur-appliance
        image: registry.sighup.io/workshop/conjur-appliance:13.0.4
        command: ["/tmp/seedfile/start-follower.sh"]
        imagePullPolicy: Always
        ports:
        - containerPort: 443
          name: https
        readinessProbe:
          httpGet:
            path: /health
            port: 443
            scheme: HTTPS
          initialDelaySeconds: 15
          timeoutSeconds: 5
        volumeMounts:
          - name: seedfile
            mountPath: /tmp/seedfile
            readOnly: true
