devsecopsday/kubernetes-security/hands-on/k8s/demo-app-conjur.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: demo-app

---
apiVersion: v1
kind: Service
metadata:
  name: demo-app
  namespace: demo-app
spec:
  selector:
    app: demo-app
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
    nodePort: 30080
  type: NodePort

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-app-deployment
  namespace: demo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-app
  template:
    metadata:
      labels:
        app: demo-app
    spec:
      containers:
        - name: demo-app-container
          image: registry.sighup.io/workshop/demo-app-db:1.0.5
          ports:
            - containerPort: 8080
          volumeMounts:
          - mountPath: /run/conjur
            name: conjur-access-token
            readOnly: true
          command: [ "summon", "-f", "/etc/secrets.yml", "ruby", "/usr/src/cityapp_fromenv.rb", "-o", "0.0.0.0" ]

        - image: registry.sighup.io/workshop/conjur-authn-k8s-client:0.25.0
          imagePullPolicy: IfNotPresent
          name: authenticator
          volumeMounts:
            - mountPath: /run/conjur
              name: conjur-access-token
      volumes:
        - name: conjur-access-token
          emptyDir:
            medium: Memory

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-app-db
  namespace: demo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - name: mysql
          image: registry.sighup.io/workshop/demo-app-db:1.0.5
          ports:
            - containerPort: 3306
---
apiVersion: v1
kind: Service
metadata:
  name: demo-app-db
  namespace: demo-app
spec:
  selector:
    app: mysql
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
  type: ClusterIP
