devsecopsday/kubernetes-security/hands-on/k8s/exposed-api.yaml
# exposed-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: exposed-api-service
spec:
  selector:
    app: exposed-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: exposed-api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: exposed-api
  template:
    metadata:
      labels:
        app: exposed-api
    spec:
      containers:
        - name: exposed-api-container
          image: httpd:2.4.57-alpine3.18
          ports:
            - containerPort: 8080
