devsecopsday/kubernetes-security/hands-on/k8s/basic-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-traffic
spec:
  podSelector:
    matchLabels:
      app: allowed-app
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: sample-app
