devsecopsday/kubernetes-security/hands-on/k8s/block-egress-traffic.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: block-egress-traffic
spec:
  podSelector: {}
  egress:
    - to:
        - podSelector: {}
